--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "name": "todolist",
   "version": "1.0.0",
-  "description": "\"Todolist app\"",
+  "description": "This allowed you to list all the items/tasks that you want to accomplish for your day to day activities.",
   "main": "app.js",
   "dependencies": {
-    "bl": "^2.2.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.19.0",
     "bson": "^1.1.6",
+    "bl": "^2.2.1",
     "core-util-is": "^1.0.2",
     "denque": "^1.5.0",
-    "ejs": "^3.1.6",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "isarray": "^1.0.0",
     "kareem": "^2.3.2",
     "lodash": "^4.17.21",
     "memory-pager": "^1.5.0",
     "mongodb": "^3.6.11",
-    "mongoose-legacy-pluralize": "^1.0.2",
     "mongoose": "^5.13.6",
+    "mongoose-legacy-pluralize": "^1.0.2",
     "mpath": "^0.8.3",
     "mquery": "^3.2.5",
     "optional-require": "^1.0.3",
     "process-nextick-args": "^2.0.1",
-    "regexp-clone": "^1.0.0",
     "readable-stream": "^2.3.7",
+    "regexp-clone": "^1.0.0",
     "saslprep": "^1.0.3",
-    "sliced": "^1.0.1",
     "sift": "^13.5.2",
+    "sliced": "^1.0.1",
     "sparse-bitfield": "^3.0.3",
     "string_decoder": "^1.1.1",
     "util-deprecate": "^1.0.2"
@@ -37,7 +37,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Daryl G.",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "engines": {
     "node": "14.17.4"
